fix: icon button not aligned on different resolutions

--- a/src/app/features/suggested/suggested.component.less
+++ b/src/app/features/suggested/suggested.component.less
@@ -27,7 +27,7 @@
       flex: 1;
       outline-width: 0;
       border: 1px solid rgba(160, 160, 160, 0.7);
-      padding: 1%;
+      padding: 10px;
       padding-left: 2%;
       border-right: transparent;
       border-bottom-left-radius: 2rem;
@@ -39,11 +39,10 @@
       color: @font-default-black;
       border-radius: 0rem 2rem 2rem 0rem;
       border: 1px solid rgba(160, 160, 160, 0.7);
-      padding: 1%;
-      padding-top: 0.8%;
+      padding: 0.6% 1.5% 0 1.5%;
       font-size: 1.2em;
       font-weight: bold;
-      height: 2.5rem;
+      height: 38px;
       &:hover {
         background-color: @background-default-black;
         color: @font-default-white;
